[CCAP-700] - enable applications in sda 6 (#1275)
Co-authored-by: transifex-integration[bot] <43880903+transifex-integration[bot]@users.noreply.github.com>